--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ license = "GPL 3.0"
 python = "^3.10"
 pygame = "^2.1.2"
 numpy = "^1.22.4"
+gql = "^3.3.0"
+aiohttp = "^3.8.1"
+requests = "^2.27.1"
+requests-toolbelt = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 
