--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pygame = "^2.1.2"
 numpy = "^1.22.4"
 gql = "^3.3.0"
 aiohttp = "^3.8.1"
+matplotlib = "^3.5.2"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
